# soundcity

./: CMakeLists.txt  LICENSE  README.md  soundcity.sublime-project
documents/: Makefile  biblio.tex  cahier_besoins.tex  etude.tex  memoire.bib  musicovery.tex  sourcetone.tex  spotibot.tex
documents/memoire/: Makefile  archi.tex  besoins.tex  existant.tex  implementation.tex  main.tex  memoire.bib  objectifs.tex  scenarii.tex  tests.tex
include/: Album.h  Artist.h  ContextData.h  GenerationObservable.h  Generator.h  IDatabase.h  IGenerationObserver.h  IOutputStrategy.h  ISelectionObserver.h  ISimilarityStrategy.h  NaiveSimilarityStrategy.h  Observable.hpp  OptionList.h  Playlist.h  SQLiteDatabase.h  SelectionObservable.h  SignalData.h  SimilarityStrategy.h  TextIDOutput.h  TextOutput.h  Track.h  TrackPool.h
scripts/: README.md  dump_msd.py
src/: Album.cpp  Artist.cpp  ConsoleUserInterface.cpp  ContextData.cpp  GenerationObservable.cpp  Generator.cpp  NaiveSimilarityStrategy.cpp  OptionList.cpp  Playlist.cpp  SQLiteDatabase.cpp  SelectionObservable.cpp  SignalData.cpp  SimilarityStrategy.cpp  TextIDOutput.cpp  TextOutput.cpp  Track.cpp
test/: CMakeLists.txt  SQLiteTest.cpp  SimilarityStrategyTest.cpp  soundcity_console.cpp  test_playlist_similarity.cpp  test_playlist_variation.cpp  test_similarity.cpp  test_sqlite.cpp  test_track.cpp
